agregue comentarios a los imports

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,19 @@
+//base
+@import 'base/reset';
+@import 'base/navbar';
+
+//components
+
+
+//layouts
+@import 'layout/index';
+@import 'layout/boxeo';
+@import 'layout/contacto';
+@import 'layout/crossfit';
+@import 'layout/spinning';
+
+
+
 
 
 
