--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,252 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+nav {
+  background-color: blanchedalmond;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  align-items: center;
+  height: 80px;
+  top: 0%;
+  z-index: 3;
+  border-bottom: 1px solid black;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  padding: 15px;
+  margin-right: 10px;
+  gap: 10px;
+  align-items: center;
+}
+
+.nav-link {
+  display: flex;
+  text-decoration: none;
+  color: blueviolet;
+  font-size: 24px;
+  font-weight: semi-bold;
+  gap: 10px;
+  align-items: center;
+}
+
+.nav-logo {
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-right: 0px;
+  font-size: 20px;
+  color: black;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.hero {
+  background-image: url(../assets/images/bodygym2.avif);
+  background-size: cover;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.hero article {
+  width: 60%;
+}
+
+.hero h1 {
+  font-weight: bold;
+}
+
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  gap: 10px;
+}
+
+.box2 {
+  width: 100%;
+  height: 100%;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 15px;
+  border: 1px solid white;
+}
+
+.box2 div {
+  z-index: 3;
+  border-radius: 14px;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  padding: 10px;
+  display: grid;
+  place-items: end start;
+  opacity: 0.5;
+}
+
+.box2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(3px);
+  position: absolute;
+  border-radius: 6px;
+  box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
+  border: 1px solid white;
+}
+
+.b1 {
+  grid-area: a1;
+}
+
+.b2 {
+  grid-area: a2;
+}
+
+.b3 {
+  grid-area: a3;
+}
+
+.b4 {
+  grid-area: a4;
+}
+
+.b5 {
+  grid-area: a5;
+}
+
+.b6 {
+  grid-area: a6;
+}
+
+.grid2 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 15px;
+  gap: 15px;
+  place-items: end center;
+  grid-template-areas: "a3 a3 a1 a1" "a2 a2 a1 a1" "a5 a5 a5 a5";
+}
+
+.box2:hover img {
+  filter: blur(0);
+  width: 100%;
+  height: 100%;
+}
+
+.box2:hover {
+  background-color: cadetblue;
+  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+}
+
+.box2:nth-child(even) {
+  flex-direction: row-reverse;
+  background-color: bisque;
+}
+
+.row {
+  margin: 0;
+  justify-content: space-around;
+}
+
+footer p {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 30px;
+  color: black;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 300px);
+  padding: 15px;
+  gap: 15px;
+  place-items: end center;
+  grid-template-areas: "a3 a3 a6 a6" "a3 a3 a4 a2" "a5 a5 a1 a1";
+}
+
+.hero2 {
+  background-image: url(../assets/images/crossfit4.avif);
+  background-size: cover;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.box {
+  width: 90%;
+  background-color: rgb(179, 160, 160);
+  padding: 15px;
+  border: 2px solid grey;
+  display: flex;
+  gap: 15px;
+  transition: 0.5s;
+}
+
+.box-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(5px);
+  transition: 0.5s;
+}
+
+.box-img {
+  width: 50%;
+  height: 300px;
+  overflow: hidden;
+}
+
+.box-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 15px;
+  width: 50%;
+}
+
+.box:hover img {
+  filter: blur(0);
+  width: 400px;
+  height: 500px;
+}
+
+.box:hover {
+  background-color: cadetblue;
+  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+}
+
+.box:nth-child(even) {
+  flex-direction: row-reverse;
+  background-color: bisque;
+}
+
+.box:nth-child(even):hover {
+  background-color: blanchedalmond;
+}
+
 body {
   background-color: blanchedalmond;
 }
