--- a/scss/layout/_boxeo.scss
+++ b/scss/layout/_boxeo.scss
@@ -1,4 +1,74 @@
-.grid {
+.box__boxeo {
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border-radius: 15px;
+    border: 1px solid white;
+}
+
+.box__boxeo div {
+    z-index: 3;
+    border-radius: 14px;
+    background-color: black;
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    padding: 10px;
+    display: grid;
+    place-items: end start;
+    opacity: 0.5;
+    
+}
+
+.box__boxeo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: blur(3px);
+    position: absolute;
+    border-radius: 6px;
+    box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
+    border: 1px solid white;
+}
+
+.c1 {
+
+    grid-area: a1;
+    
+}
+
+.c2 {
+
+    grid-area: a2;
+}
+
+.c3 {
+
+    grid-area: a3;
+}
+
+.c4 {
+
+    grid-area: a4;
+
+}
+
+.c5 {
+    
+    grid-area: a5;
+}
+
+.c6 {
+    
+    grid-area: a6;
+}
+
+.grid__boxeo {
     display: grid;
     grid-template-columns: repeat(4, 1fr) ;
     grid-template-rows: repeat(3, 300px);
