--- a/css/style.css
+++ b/css/style.css
@@ -1,572 +1,17 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 2 | @import 'base/reset';
+ *   |         ^^^^^^^^^^^^
+ *   '
+ *   scss\style.scss 2:9  root stylesheet */
+
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 2 \2502  @import 'base/reset';\d\a   \2502          ^^^^^^^^^^^^\a   \2575 \a   scss\\style.scss 2:9  root stylesheet";
 }
-
-nav {
-  background-color: blanchedalmond;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: 10px;
-  margin: 10px;
-  display: flex;
-  justify-content: space-between;
-  gap: 10px;
-  align-items: center;
-  height: 80px;
-  top: 0%;
-  z-index: 3;
-  border-bottom: 1px solid black;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  padding: 15px;
-  margin-right: 10px;
-  gap: 10px;
-  align-items: center;
-}
-
-.nav-link {
-  display: flex;
-  text-decoration: none;
-  color: blueviolet;
-  font-size: 24px;
-  font-weight: semi-bold;
-  gap: 10px;
-  align-items: center;
-}
-
-.nav-logo {
-  padding-top: 0;
-  padding-bottom: 0;
-  margin-right: 0px;
-  font-size: 20px;
-  color: black;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.hero {
-  background-image: url(../assets/images/bodygym2.avif);
-  background-size: cover;
-  height: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
-.hero article {
-  width: 60%;
-}
-
-.hero h1 {
-  font-weight: bold;
-}
-
-.hero-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-}
-
-.box2 {
-  width: 100%;
-  height: 100%;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 15px;
-  border: 1px solid white;
-}
-
-.box2 div {
-  z-index: 3;
-  border-radius: 14px;
-  background-color: black;
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  padding: 10px;
-  display: grid;
-  place-items: end start;
-  opacity: 0.5;
-}
-
-.box2 img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(3px);
-  position: absolute;
-  border-radius: 6px;
-  box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-  border: 1px solid white;
-}
-
-.b1 {
-  grid-area: a1;
-}
-
-.b2 {
-  grid-area: a2;
-}
-
-.b3 {
-  grid-area: a3;
-}
-
-.b4 {
-  grid-area: a4;
-}
-
-.b5 {
-  grid-area: a5;
-}
-
-.b6 {
-  grid-area: a6;
-}
-
-.grid2 {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 15px;
-  gap: 15px;
-  place-items: end center;
-  grid-template-areas: "a3 a3 a1 a1" "a2 a2 a1 a1" "a5 a5 a5 a5";
-}
-
-.box2:hover img {
-  filter: blur(0);
-  width: 100%;
-  height: 100%;
-}
-
-.box2:hover {
-  background-color: cadetblue;
-  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box2:nth-child(even) {
-  flex-direction: row-reverse;
-  background-color: bisque;
-}
-
-.row {
-  margin: 0;
-  justify-content: space-around;
-}
-
-footer p {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 30px;
-  color: black;
-}
-
-.box__boxeo {
-  width: 100%;
-  height: 100%;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 15px;
-  border: 1px solid white;
-}
-
-.box__boxeo div {
-  z-index: 3;
-  border-radius: 14px;
-  background-color: black;
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  padding: 10px;
-  display: grid;
-  place-items: end start;
-  opacity: 0.5;
-}
-
-.box__boxeo img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(3px);
-  position: absolute;
-  border-radius: 6px;
-  box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-  border: 1px solid white;
-}
-
-.c1 {
-  grid-area: a1;
-}
-
-.c2 {
-  grid-area: a2;
-}
-
-.c3 {
-  grid-area: a3;
-}
-
-.c4 {
-  grid-area: a4;
-}
-
-.c5 {
-  grid-area: a5;
-}
-
-.c6 {
-  grid-area: a6;
-}
-
-.grid__boxeo {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 300px);
-  padding: 15px;
-  gap: 15px;
-  place-items: end center;
-  grid-template-areas: "a3 a3 a6 a6" "a3 a3 a4 a2" "a5 a5 a1 a1";
-}
-
-.ct1 {
-  grid-area: c1;
-}
-
-.ct2 {
-  grid-area: c2;
-}
-
-.ct3 {
-  grid-area: c3;
-}
-
-.grid__contacto {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 15px;
-  gap: 15px;
-  place-items: end center;
-  grid-template-areas: "c3 c3 c1 c1" "c2 c2 c1 c1" "c5 c5 c5 c5";
-}
-
-.box__contacto {
-  width: 100%;
-  height: 100%;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  border-radius: 15px;
-  border: 1px solid white;
-}
-
-.box__contacto div {
-  z-index: 3;
-  border-radius: 14px;
-  background-color: black;
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  padding: 10px;
-  display: grid;
-  place-items: end start;
-  opacity: 0.5;
-}
-
-.box__contacto img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(3px);
-  position: absolute;
-  border-radius: 6px;
-  box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-  border: 1px solid white;
-}
-
-.box__contacto:hover img {
-  filter: blur(0);
-  width: 100%;
-  height: 100%;
-}
-
-.box__contacto:hover {
-  background-color: cadetblue;
-  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box__contacto:nth-child(even) {
-  flex-direction: row-reverse;
-  background-color: bisque;
-}
-
-.hero2 {
-  background-image: url(../assets/images/crossfit4.avif);
-  background-size: cover;
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-}
-
-.box {
-  width: 90%;
-  background-color: rgb(179, 160, 160);
-  padding: 15px;
-  border: 2px solid grey;
-  display: flex;
-  gap: 15px;
-  transition: 0.5s;
-}
-
-.box-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(5px);
-  transition: 0.5s;
-}
-
-.box-img {
-  width: 50%;
-  height: 300px;
-  overflow: hidden;
-}
-
-.box-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 15px;
-  width: 50%;
-}
-
-.box:hover img {
-  filter: blur(0);
-  width: 400px;
-  height: 500px;
-}
-
-.box:hover {
-  background-color: cadetblue;
-  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box:nth-child(even) {
-  flex-direction: row-reverse;
-  background-color: bisque;
-}
-
-.box:nth-child(even):hover {
-  background-color: blanchedalmond;
-}
-
-.hero__container__spinning {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-}
-
-.box__spinning {
-  width: 90%;
-  background-color: rgb(179, 160, 160);
-  padding: 15px;
-  border: 2px solid grey;
-  display: flex;
-  gap: 15px;
-  transition: 0.5s;
-}
-
-.box__img__spinning img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: blur(5px);
-  transition: 0.5s;
-}
-
-.box__img__spinning {
-  width: 50%;
-  height: 300px;
-  overflow: hidden;
-}
-
-.box__content__spinning {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 15px;
-  width: 50%;
-}
-
-.box__spinning:hover img {
-  filter: blur(0);
-  width: 400px;
-  height: 500px;
-}
-
-.box__spinning:hover {
-  background-color: cadetblue;
-  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box__spinning:nth-child(even) {
-  flex-direction: row-reverse;
-  background-color: bisque;
-}
-
-.box__spinning:nth-child(even):hover {
-  background-color: blanchedalmond;
-}
-
-body {
-  background-color: blanchedalmond;
-}
-
-.bg-bchmnd {
-  background-color: blanchedalmond;
-}
-
-.btn-primary {
-  background-color: blanchedalmond;
-  border-radius: 0;
-  color: #111;
-  font-size: 24px;
-  border: none;
-}
-
-.btn-primary:hover, .btn-primary:focus, .btn:active {
-  border: 2px solid blanchedalmond;
-  color: burlywood;
-  background-color: transparent;
-}
-
-.card {
-  border-radius: 0;
-  padding: 0;
-  width: 400px;
-  margin: 10px 0;
-}
-
-.card-img-top {
-  border-radius: 0;
-}
-
-.carousel-inner, .carousel-item {
-  height: 600px;
-}
-
-.carousel-item img {
-  height: 100%;
-  object-fit: cover;
-  width: 50%;
-}
-
-@media (max-width: 480px) {
-  .hero article {
-    width: 100%;
-  }
-  .card {
-    width: 90%;
-  }
-}
-@media (min-width: 600px) {
-  .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    grid-auto-rows: minmax(300px, auto);
-    grid-auto-flow: dense;
-  }
-}
-@media (min-width: 768px) {
-  nav,
-  .hero {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .hero img,
-  .hero-content {
-    width: 50%;
-  }
-  .nav-list {
-    flex-direction: row;
-  }
-}
-@media (min-width: 1024px) {
-  .form {
-    flex-direction: row-reverse;
-  }
-  form {
-    width: 50%;
-  }
-  .form iframe {
-    width: 50%;
-    min-height: 600px;
-    max-height: 100%;
-  }
-}
-.form {
-  display: flex;
-  flex-direction: row;
-  background-color: blanchedalmond;
-  width: 100%;
-  padding: 50px 20px;
-  gap: 20px;
-}
-
-.form {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
-  grid-area: form;
-  height: 100%;
-  width: 100%;
-}
-
-.form iframe {
-  width: 50%;
-  height: 250px;
-}
-
-.form label {
-  font-size: 20px;
-  align-self: flex-end;
-}
-
-.form input,
-.form textarea {
-  width: 100%;
-  padding: 15px;
-  font-size: 20px;
-  background-color: rgb(250, 200, 125);
-  border: 2px solid blanchedalmond;
-  color: blanchedalmond;
-}
-
-/*# sourceMappingURL=style.css.map */
