--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,11 @@
 //base
 @import 'base/reset';
-@import 'base/navbar';
+@import 'base/vars';
+
 
 //components
+@import 'components/navbar';
+@import 'components/footer';
 
 
 //layouts
@@ -20,15 +23,15 @@
 
 
 body {
-    background-color: blanchedalmond;
+    background-color: $mainColor;
 }
 
 .bg-bchmnd {
-    background-color: blanchedalmond;
+    background-color: $mainColor;
 }
 
 .btn-primary {
-    background-color: blanchedalmond;
+    background-color: $mainColor;
     border-radius: 0;
     color: #111;
     font-size: 24px;
@@ -36,7 +39,7 @@ body {
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn:active {
-    border: 2px solid blanchedalmond;
+    border: 2px solid $mainColor;
     color: burlywood;
     background-color: transparent;
 }
@@ -119,7 +122,7 @@ body {
 .form {
     display: flex;
     flex-direction: row;
-    background-color: blanchedalmond;
+    background-color: $mainColor;
     width: 100%;
     padding: 50px 20px;
     gap: 20px;
@@ -152,7 +155,7 @@ body {
     padding: 15px;
     font-size: 20px;
     background-color: rgb(250, 200, 125);
-    border: 2px solid blanchedalmond;
-    color: blanchedalmond;
+    border: 2px solid $mainColor;
+    color: $mainColor;
   
   }
