--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -128,3 +128,38 @@
     margin: 0;
     justify-content: space-around;
 }
+
+.btn-primary {
+    background-color: $mainColor;
+    border-radius: 0;
+    color: #111;
+    font-size: 24px;
+    border: none;
+}
+
+.btn-primary:hover, .btn-primary:focus, .btn:active {
+    border: 2px solid $mainColor;
+    color: burlywood;
+    background-color: transparent;
+}
+
+.card {
+    border-radius: 0;
+    padding: 0;
+    width: 400px;
+    margin: 10px 0;
+}
+
+.card-img-top {
+    border-radius: 0;
+}
+
+.carousel-inner, .carousel-item {
+    height: 600px;
+}
+
+.carousel-item img {
+    height: 100%;    
+    object-fit: cover;
+    width: 50%;
+}
