agregue una mediaq

--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -1,3 +1,14 @@
+@media (max-width:300px) {
+  .hero article {
+      width: 100%;
+
+  }
+
+  .card {
+      width: 80%; 
+  }
+}
+
 @media (max-width:480px) {
     .hero article {
         width: 100%;
