--- a/css/style.css
+++ b/css/style.css
@@ -280,6 +280,22 @@ footer p {
   grid-template-areas: "a3 a3 a6 a6" "a3 a3 a4 a2" "a5 a5 a1 a1";
 }
 
+.box__boxeo:hover img {
+  filter: blur(0);
+  width: 100%;
+  height: 100%;
+}
+
+.box__boxeo:hover {
+  background-color: cadetblue;
+  box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+}
+
+.box__boxeo:nth-child(even) {
+  flex-direction: row-reverse;
+  background-color: bisque;
+}
+
 .ct1 {
   grid-area: c1;
 }
@@ -478,12 +494,38 @@ footer p {
   background-color: blanchedalmond;
 }
 
+@media (max-width: 300px) {
+  .hero article {
+    width: 100%;
+  }
+  .grid__boxeo {
+    display: inherit;
+  }
+  .card {
+    width: 80%;
+  }
+}
 @media (max-width: 480px) {
   .hero article {
     width: 100%;
   }
   .card {
     width: 90%;
+  }
+  .grid__boxeo {
+    display: inherit;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-auto-rows: minmax(300px, auto);
+    grid-auto-flow: dense;
+  }
+  .grid__boxeo {
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 600px) {
@@ -492,6 +534,11 @@ footer p {
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-auto-rows: minmax(300px, auto);
     grid-auto-flow: dense;
+  }
+  .grid__boxeo {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
 }
 @media (min-width: 768px) {
@@ -507,6 +554,11 @@ footer p {
   .nav-list {
     flex-direction: row;
   }
+  .grid__boxeo {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
 }
 @media (min-width: 1024px) {
   .form {
@@ -519,6 +571,9 @@ footer p {
     width: 50%;
     min-height: 600px;
     max-height: 100%;
+  }
+  .grid__boxeo {
+    display: grid;
   }
 }
 body {
