--- a/scss/layout/_boxeo.scss
+++ b/scss/layout/_boxeo.scss
@@ -80,3 +80,18 @@
     'a3 a3 a4 a2'
     'a5 a5 a1 a1' ;
 }
+
+.box__boxeo:hover img {
+    filter: blur(0);
+    width: 100%;
+    height: 100%;
+}
+.box__boxeo:hover {
+    background-color: cadetblue;
+    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+}
+
+.box__boxeo:nth-child(even){
+    flex-direction: row-reverse;
+    background-color: bisque;
+}
