--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -4,6 +4,10 @@
 
   }
 
+  .grid__boxeo {
+    display: inherit;
+  }
+
   .card {
       width: 80%; 
   }
@@ -18,6 +22,24 @@
     .card {
         width: 90%; 
     }
+
+    .grid__boxeo {
+      display: inherit;
+    }
+}
+
+@media (max-width:600px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-auto-rows: minmax(300px, auto);
+    grid-auto-flow: dense;
+  }
+
+  .grid__boxeo {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 @media (min-width:600px) {
@@ -26,6 +48,12 @@
       grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
       grid-auto-rows: minmax(300px, auto);
       grid-auto-flow: dense;
+    }
+
+    .grid__boxeo {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
     }
   }
   
@@ -45,6 +73,12 @@
     .nav-list {
       flex-direction: row;
     }
+
+    .grid__boxeo {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+    }
   }  
   
   @media (min-width:1024px) {
@@ -60,5 +94,9 @@
       width: 50%;
       min-height: 600px;
       max-height: 100%;
+    }
+
+    .grid__boxeo {
+      display: grid;
     }
   }
