--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,12 @@ footer p {
   justify-content: center;
   padding: 10px;
 }
-
 .hero article {
   width: 60%;
 }
-
 .hero h1 {
   font-weight: bold;
 }
-
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -94,7 +91,6 @@ footer p {
   border-radius: 15px;
   border: 1px solid white;
 }
-
 .box2 div {
   z-index: 3;
   border-radius: 14px;
@@ -108,7 +104,6 @@ footer p {
   place-items: end start;
   opacity: 0.5;
 }
-
 .box2 img {
   width: 100%;
   height: 100%;
@@ -158,13 +153,11 @@ footer p {
   width: 100%;
   height: 100%;
 }
-
-.box2:hover {
+.box2:hover img:hover {
   background-color: cadetblue;
   box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
 }
-
-.box2:nth-child(even) {
+.box2:hover img:nth-child(even) {
   flex-direction: row-reverse;
   background-color: bisque;
 }
