--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -7,24 +7,27 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
+
+    & article {
+
+        width: 60%;
+
+    }
+
+    & h1 {
+        font-weight: bold;        
+    }
+    
+    &-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+    }
 }
 
-.hero article {
-    width: 60%;
-}
-
-.hero h1 {
-    font-weight: bold;
-}
-
-.hero-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    gap: 10px;
-}
 
 .box2 {
     width: 100%;
@@ -36,33 +39,33 @@
     position: relative;
     border-radius: 15px;
     border: 1px solid white;
+
+    & div {
+        z-index: 3;
+        border-radius: 14px;
+        background-color: black;
+        color: white;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        padding: 10px;
+        display: grid;
+        place-items: end start;
+        opacity: 0.5;
+    }
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(3px);
+        position: absolute;
+        border-radius: 6px;
+        box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
+        border: 1px solid white;
+    }
 }
 
-.box2 div {
-    z-index: 3;
-    border-radius: 14px;
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    padding: 10px;
-    display: grid;
-    place-items: end start;
-    opacity: 0.5;
-    
-}
-
-.box2 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(3px);
-    position: absolute;
-    border-radius: 6px;
-    box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-    border: 1px solid white;
-}
 
 .b1 {
 
@@ -113,15 +116,16 @@
     filter: blur(0);
     width: 100%;
     height: 100%;
-}
-.box2:hover {
-    background-color: cadetblue;
-    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
 
-.box2:nth-child(even){
-    flex-direction: row-reverse;
-    background-color: bisque;
+    &:hover {
+        background-color: cadetblue;
+        box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+    }
+
+    &:nth-child(even){
+        flex-direction: row-reverse;
+        background-color: bisque;
+    }
 }
 
 .row {
