--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -38,45 +38,45 @@
     position: relative;
     border-radius: 15px;
     border: 1px solid white;
-}
 
-.box__contacto div {
-    z-index: 3;
-    border-radius: 14px;
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    padding: 10px;
-    display: grid;
-    place-items: end start;
-    opacity: 0.5;
-    
-}
+    & div {
+        z-index: 3;
+        border-radius: 14px;
+        background-color: black;
+        color: white;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        padding: 10px;
+        display: grid;
+        place-items: end start;
+        opacity: 0.5;
+    }
 
-.box__contacto img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(3px);
-    position: absolute;
-    border-radius: 6px;
-    box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-    border: 1px solid white;
-}
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(3px);
+        position: absolute;
+        border-radius: 6px;
+        box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
+        border: 1px solid white;
+    }
 
-.box__contacto:hover img {
-    filter: blur(0);
-    width: 100%;
-    height: 100%;
-}
-.box__contacto:hover {
-    background-color: cadetblue;
-    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
+    &:hover img {
+        filter: blur(0);
+        width: 100%;
+        height: 100%;
+    }
 
-.box__contacto:nth-child(even){
-    flex-direction: row-reverse;
-    background-color: bisque;
+    &:hover {
+        background-color: cadetblue;
+        box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+    }
+
+    &:nth-child(even){
+        flex-direction: row-reverse;
+        background-color: bisque;
+    }
 }
