--- a/scss/layout/_crossfit.scss
+++ b/scss/layout/_crossfit.scss
@@ -27,20 +27,40 @@
     display: flex;
     gap: 15px;
     transition: 0.5s;
-}
 
-.box__img__crossfit img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(5px);
-    transition: 0.5s;
+    &:hover img {
+        filter: blur(0);
+        width: 400px;
+        height: 500px;
+    }
+
+    &:hover {
+        background-color: cadetblue;
+        box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+    }
+
+    &:nth-child(even){
+        flex-direction: row-reverse;
+        background-color: bisque;
+    }
+
+    &:nth-child(even):hover {
+        background-color: blanchedalmond;
+    }
 }
 
 .box__img__crossfit {
     width: 50%;
     height: 300px;
     overflow: hidden;
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(5px);
+        transition: 0.5s;
+    }
 }
 
 
@@ -62,33 +82,49 @@
     position: relative;
     border-radius: 15px;
     border: 1px solid white;
+
+    & div {
+        z-index: 3;
+        border-radius: 14px;
+        background-color: black;
+        color: white;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        padding: 10px;
+        display: grid;
+        place-items: end start;
+        opacity: 0.5;
+    }
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        filter: blur(3px);
+        position: absolute;
+        border-radius: 6px;
+        box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
+        border: 1px solid white;
+    }
+
+    &:hover img {
+        filter: blur(0);
+        width: 100%;
+        height: 100%;
+    }
+
+    &:hover {
+        background-color: cadetblue;
+        box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
+    }
+
+    &:nth-child(even){
+        flex-direction: row-reverse;
+        background-color: bisque;
+    }
 }
 
-.box__crossfit2 div {
-    z-index: 3;
-    border-radius: 14px;
-    background-color: black;
-    color: white;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    padding: 10px;
-    display: grid;
-    place-items: end start;
-    opacity: 0.5;
-    
-}
-
-.box__crossfit2 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: blur(3px);
-    position: absolute;
-    border-radius: 6px;
-    box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-    border: 1px solid white;
-}
 .b1 {
 
     grid-area: a1;
@@ -117,42 +153,5 @@
     'a3 a3 a2 a2'
     'a5 a5 a5 a5' ;
 
-}
-
-.box__crossfit:hover img {
-    filter: blur(0);
-    width: 400px;
-    height: 500px;
-}
-.box__crossfit:hover {
-    background-color: cadetblue;
-    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box__crossfit:nth-child(even){
-    flex-direction: row-reverse;
-    background-color: bisque;
-}
-
-.box__crossfit:nth-child(even):hover {
-
-    background-color: blanchedalmond;
-
-
-}
-
-.box__crossfit2:hover img {
-    filter: blur(0);
-    width: 100%;
-    height: 100%;
-}
-.box__crossfit2:hover {
-    background-color: cadetblue;
-    box-shadow: 3px 3px 13px 5px rgba(20, 20, 73, 0.603);
-}
-
-.box__crossfit2:nth-child(even){
-    flex-direction: row-reverse;
-    background-color: bisque;
 }
 
