--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,12 +9,12 @@
 
 
 //layouts
-@import 'layout/index';
-@import 'layout/boxeo';
-@import 'layout/contacto';
-@import 'layout/crossfit';
-@import 'layout/spinning';
-@import 'layout/mediaqueries';
+@import 'layouts/index';
+@import 'layouts/boxeo';
+@import 'layouts/contacto';
+@import 'layouts/crossfit';
+@import 'layouts/spinning';
+@import 'layouts/mediaqueries';
 
 
 
