--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -77,6 +77,6 @@
 
     &:nth-child(even){
         flex-direction: row-reverse;
-        background-color: bisque;
+        background-color: $primaryColor;
     }
 }
