--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -1,3 +1,7 @@
+body {
+    background-color: $mainColor;
+}
+
 .hero {
     background-image: url(../assets/images/bodygym2.avif);
     background-size: cover;
@@ -124,7 +128,7 @@
 
     &:nth-child(even){
         flex-direction: row-reverse;
-        background-color: bisque;
+        background-color: $primaryColor;
     }
 }
 
