--- a/scss/layouts/_spinning.scss
+++ b/scss/layouts/_spinning.scss
@@ -29,11 +29,11 @@
 
     &:nth-child(even){
         flex-direction: row-reverse;
-        background-color: bisque;
+        background-color: $primaryColor;
     }
 
     &:nth-child(even):hover {
-        background-color: blanchedalmond;
+        background-color: $mainColor;
     }
 }
 
