--- a/scss/layouts/_boxeo.scss
+++ b/scss/layouts/_boxeo.scss
@@ -47,7 +47,7 @@
 
     &:nth-child(even){
         flex-direction: row-reverse;
-        background-color: bisque;
+        background-color: $primaryColor;
     }
 
 }
