--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -37,7 +37,7 @@
     justify-content: center;
     position: relative;
     border-radius: 15px;
-    border: 1px solid white;
+    border: 1px solid $borderColor;
 
     & div {
         z-index: 3;
@@ -61,7 +61,7 @@
         position: absolute;
         border-radius: 6px;
         box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-        border: 1px solid white;
+        border: 1px solid $borderColor;
     }
 
     &:hover img {
