--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -23,7 +23,7 @@
     width: 100%;
     background-color: rgb(179, 160, 160);
     padding: 10px;
-    border: 2px solid grey;
+    border: 2px solid $borderColor;
     display: flex;
     gap: 15px;
     transition: 0.5s;
@@ -81,7 +81,7 @@
     justify-content: center;
     position: relative;
     border-radius: 15px;
-    border: 1px solid white;
+    border: 1px solid $borderColor;
 
     & div {
         z-index: 3;
@@ -105,7 +105,7 @@
         position: absolute;
         border-radius: 6px;
         box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-        border: 1px solid white;
+        border: 1px solid $borderColor;
     }
 
     &:hover img {
