--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -42,7 +42,7 @@ body {
     justify-content: center;
     position: relative;
     border-radius: 15px;
-    border: 1px solid white;
+    border: 1px solid $borderColor;
 
     & div {
         z-index: 3;
@@ -66,7 +66,7 @@ body {
         position: absolute;
         border-radius: 6px;
         box-shadow: 2px 2px 5px 2px rgba(255, 235, 205, 0.233);
-        border: 1px solid white;
+        border: 1px solid $borderColor;
     }
 }
 
