--- a/scss/layouts/_spinning.scss
+++ b/scss/layouts/_spinning.scss
@@ -11,7 +11,7 @@
     width: 90%;
     background-color: rgb(179, 160, 160);
     padding: 15px;
-    border: 2px solid grey;
+    border: 2px solid $borderColor;
     display: flex;
     gap: 15px;
     transition: 0.5s;
