--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -7,6 +7,25 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
+    
+    & article {
+
+        width: 60%;
+
+    }
+
+    & h1 {
+        font-weight: bold;        
+    }
+    
+    &-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        gap: 10px;
+    }
 }
 
 .hero__container__crossfit {
