--- a/scss/layouts/_mediaqueries.scss
+++ b/scss/layouts/_mediaqueries.scss
@@ -4,6 +4,10 @@
 
   }
 
+  .hero__crossfit article {
+    width: 100%;
+  }
+
   .grid__boxeo {
     display: inherit;
   }
@@ -29,6 +33,10 @@
     .hero article {
         width: 100%;
 
+    }
+
+    .hero__crossfit article {
+      width: 100%;
     }
 
     .card {
