--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,12 @@
   gap: 15px;
 }
 
+.flexible, .box__content__spinning, .hero__container__spinning, .box__crossfit2, .box__content__crossfit, .hero__container__crossfit, .hero__crossfit, .box__contacto, .box__boxeo, .box2, .hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -187,10 +193,7 @@ body {
   background-image: url(../assets/images/bodygym2.avif);
   background-size: cover;
   height: 600px;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 .hero article {
   width: 60%;
@@ -203,9 +206,6 @@ body {
   width: 100%;
   height: 100%;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   border-radius: 15px;
   border: 1px solid white;
@@ -321,9 +321,6 @@ body {
   width: 100%;
   height: 100%;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   border-radius: 15px;
   border: 1px solid white;
@@ -418,9 +415,6 @@ body {
   width: 100%;
   height: 100%;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   border-radius: 15px;
   border: 1px solid white;
@@ -461,13 +455,10 @@ body {
 }
 
 .hero__crossfit {
+  flex-direction: column;
   background-image: url(../assets/images/crossfit4.avif);
   background-size: cover;
   height: 500px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 .hero__crossfit article {
   width: 60%;
@@ -477,10 +468,7 @@ body {
 }
 
 .hero__container__crossfit {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .box__crossfit {
@@ -521,9 +509,7 @@ body {
 }
 
 .box__content__crossfit {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 50%;
 }
 
@@ -531,9 +517,6 @@ body {
   width: 100%;
   height: 100%;
   font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
   border-radius: 15px;
   border: 1px solid white;
@@ -593,10 +576,7 @@ body {
 }
 
 .hero__container__spinning {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .box__spinning {
@@ -638,9 +618,7 @@ body {
 }
 
 .box__content__spinning {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 50%;
 }
 
