--- a/scss/layouts/_boxeo.scss
+++ b/scss/layouts/_boxeo.scss
@@ -1,10 +1,8 @@
 .box__boxeo {
+    @extend .flexible;
     width: 100%;
     height: 100%;
     font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
     border-radius: 15px;
     border: 1px solid $borderColor;
