--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -1,11 +1,12 @@
 .hero__crossfit {
+    @extend .flexible;
+    flex-direction: column;
+    
+    
     background-image: url(../assets/images/crossfit4.avif);
     background-size: cover;
     height: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
     
     
     & article {
@@ -22,10 +23,10 @@
 }
 
 .hero__container__crossfit {
-    display: flex;
+    @extend .flexible;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    
+    
 }
 
 
@@ -73,19 +74,16 @@
 
 
 .box__content__crossfit {
-    display: flex;
+    @extend .flexible;
     flex-direction: column;
-    justify-content: center;
     width: 50%;
 }
 
 .box__crossfit2 {
+    @extend .flexible;
     width: 100%;
     height: 100%;
     font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
     border-radius: 15px;
     border: 1px solid $borderColor;
