--- a/scss/layouts/_boxeo.scss
+++ b/scss/layouts/_boxeo.scss
@@ -1,5 +1,5 @@
 .box__boxeo {
-    @extend .flexible;
+    @include flexible(column,center,center);
     width: 100%;
     height: 100%;
     font-weight: bold;
