--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -27,7 +27,7 @@
 }
 
 .box__contacto {
-    @extend .flexible;
+    @include flexible(column,center,center);
     width: 100%;
     height: 100%;
     font-weight: bold;
