--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -1,6 +1,5 @@
 .hero__crossfit {
-    @extend .flexible;
-    flex-direction: column;
+    @include flexible(column,center,center);
     
     
     background-image: url(../assets/images/crossfit4.avif);
@@ -23,10 +22,7 @@
 }
 
 .hero__container__crossfit {
-    @extend .flexible;
-    flex-direction: column;
-    
-    
+    @include flexible(column,center,center);    
 }
 
 
@@ -74,13 +70,12 @@
 
 
 .box__content__crossfit {
-    @extend .flexible;
-    flex-direction: column;
+    @include flexible(column,center,center);
     width: 50%;
 }
 
 .box__crossfit2 {
-    @extend .flexible;
+    @include flexible(column,center,center);
     width: 100%;
     height: 100%;
     font-weight: bold;
