--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -3,11 +3,10 @@ body {
 }
 
 .hero {
-    @extend .flexible;
+    @include flexible(column,center,center);
     background-image: url(../assets/images/bodygym2.avif);
     background-size: cover;
     height: 600px;
-    flex-direction: column;
 
     & article {
 
@@ -24,7 +23,7 @@ body {
 
 
 .box2 {
-    @extend .flexible;
+    @include flexible(column,center,center);
     width: 100%;
     height: 100%;
     font-weight: bold;
