--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -48,9 +48,7 @@
     }
 
     & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        @include images(100%,100%);
         filter: blur(3px);
         position: absolute;
         border-radius: 6px;
