--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -60,9 +60,7 @@
     overflow: hidden;
 
     & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        @include images(100%,100%);
         filter: blur(5px);
         transition: 0.5s;
     }
@@ -96,9 +94,7 @@
     }
 
     & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        @include images(100%,100%);
         filter: blur(3px);
         position: absolute;
         border-radius: 6px;
