--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -44,9 +44,7 @@ body {
     }
 
     & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        @include images(100%,100%);
         filter: blur(3px);
         position: absolute;
         border-radius: 6px;
@@ -150,7 +148,5 @@ body {
 }
 
 .carousel-item img {
-    height: 100%;    
-    object-fit: cover;
-    width: 50%;
+    @include images(50%,100%);
 }
