--- a/scss/layouts/_spinning.scss
+++ b/scss/layouts/_spinning.scss
@@ -37,9 +37,7 @@
     overflow: hidden;
 
     & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        @include images(100%,100%);
         filter: blur(5px);
         transition: 0.5s;
     }
