--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ body {
   filter: blur(0);
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .box2:hover img:hover {
   background-color: cadetblue;
@@ -355,6 +356,7 @@ body {
   filter: blur(0);
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .box__boxeo:hover {
   background-color: cadetblue;
@@ -453,6 +455,7 @@ body {
   filter: blur(0);
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .box__contacto:hover {
   background-color: cadetblue;
@@ -497,6 +500,7 @@ body {
   filter: blur(0);
   width: 400px;
   height: 500px;
+  object-fit: cover;
 }
 .box__crossfit:hover {
   background-color: cadetblue;
@@ -513,6 +517,7 @@ body {
 .box__img__crossfit {
   width: 50%;
   height: 300px;
+  object-fit: cover;
   overflow: hidden;
 }
 .box__img__crossfit img {
@@ -568,6 +573,7 @@ body {
   filter: blur(0);
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .box__crossfit2:hover {
   background-color: cadetblue;
@@ -616,6 +622,7 @@ body {
   filter: blur(0);
   width: 400px;
   height: 500px;
+  object-fit: cover;
 }
 .box__spinning:hover {
   background-color: cadetblue;
@@ -632,6 +639,7 @@ body {
 .box__img__spinning {
   width: 50%;
   height: 300px;
+  object-fit: cover;
   overflow: hidden;
 }
 .box__img__spinning img {
