--- a/scss/layouts/_boxeo.scss
+++ b/scss/layouts/_boxeo.scss
@@ -30,8 +30,7 @@
 
     &:hover img {
         filter: blur(0);
-        width: 100%;
-        height: 100%;
+        @include images(100%,100%);
     }
 
     &:hover {
