--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -58,8 +58,7 @@
 
     &:hover img {
         filter: blur(0);
-        width: 100%;
-        height: 100%;
+        @include images(100%,100%);
     }
 
     &:hover {
