--- a/scss/layouts/_crossfit.scss
+++ b/scss/layouts/_crossfit.scss
@@ -35,8 +35,7 @@
 
     &:hover img {
         filter: blur(0);
-        width: 400px;
-        height: 500px;
+        @include images(400px,500px);
     }
 
     &:hover {
@@ -55,8 +54,7 @@
 }
 
 .box__img__crossfit {
-    width: 50%;
-    height: 300px;
+    @include images(50%,300px);
     overflow: hidden;
 
     & img {
@@ -104,8 +102,7 @@
 
     &:hover img {
         filter: blur(0);
-        width: 100%;
-        height: 100%;
+        @include images(100%,100%);
     }
 
     &:hover {
