--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -99,8 +99,7 @@ body {
 
 .box2:hover img {
     filter: blur(0);
-    width: 100%;
-    height: 100%;
+    @include images(100%,100%);
 
     &:hover {
         background-color: cadetblue;
