--- a/scss/layouts/_mediaqueries.scss
+++ b/scss/layouts/_mediaqueries.scss
@@ -12,6 +12,10 @@
     display: inherit;
   }
 
+  .grid__contacto {
+    display: inherit;
+  }
+
   .card {
       width: 80%; 
   }
@@ -48,6 +52,10 @@
     }
 
     .grid__crossfit {
+      display: inherit;
+    }
+
+    .grid__contacto {
       display: inherit;
     }
 
