--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -71,3 +71,53 @@
         background-color: $primaryColor;
     }
 }
+
+.form {
+    display: flex;
+    flex-direction: row;
+    background-color: $mainColor;
+    width: 100%;
+    padding: 50px 20px;
+    gap: 20px;
+  }
+  
+  .form {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    grid-area: form;
+    height: 100%;
+    width: 100%;
+
+    & iframe {
+        width: 50%;
+        height: 250px;
+      }
+
+    & label {
+        font-size: 20px;
+        align-self: flex-end;
+      }
+
+    & input {
+        width: 100%;
+        padding: 15px;
+        font-size: 20px;
+        background-color: rgb(250, 200, 125);
+        border: 2px solid $mainColor;
+        color: $mainColor;
+      
+      }
+      
+     & textarea {
+        width: 100%;
+        padding: 15px;
+        font-size: 20px;
+        background-color: rgb(250, 200, 125);
+        border: 2px solid $mainColor;
+        color: $mainColor;
+      
+      }
+  }
