--- a/scss/layouts/_contacto.scss
+++ b/scss/layouts/_contacto.scss
@@ -81,43 +81,73 @@
     gap: 20px;
   }
   
-  .form {
+  .form__container {
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    grid-area: form;
+    background-color: blanchedalmond;
     height: 100%;
     width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    margin: auto;
+    margin-top: 150px;
+    border-radius: 20px;
+
+    & form {
+
+        padding: 30px 80px;
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    & h3 {
+        font-size: 24px;
+        color: grey;
+        margin-bottom: 24px;
+    }
+
+    & p {
+
+    font-size: 18px;
+    color: grey;
+    margin-bottom: 24px;
+    }
+    
 
     & iframe {
         width: 50%;
-        height: 250px;
+        height: 100vh;
+        align-self: center;
       }
 
     & label {
-        font-size: 20px;
+        font-size: 18px;
+        color: grey;
         align-self: flex-end;
+        margin-bottom: 15px;
       }
 
     & input {
+        border: 0;
         width: 100%;
         padding: 15px;
         font-size: 20px;
-        background-color: rgb(250, 200, 125);
+        background: linear-gradient(45deg, rgb(93 207 181), transparent);
+        border-radius: 20px;
         border: 2px solid $mainColor;
         color: $mainColor;
+        outline: none;
       
       }
       
      & textarea {
         width: 100%;
-        padding: 15px;
+        padding: 10px;
         font-size: 20px;
-        background-color: rgb(250, 200, 125);
+        background: linear-gradient(45deg, rgb(93 207 181), transparent);
+        border-radius: 20px;
         border: 2px solid $mainColor;
         color: $mainColor;
+        outline: none;
       
       }
   }
