--- a/scss/layouts/_mediaqueries.scss
+++ b/scss/layouts/_mediaqueries.scss
@@ -16,9 +16,25 @@
     display: inherit;
   }
 
+
+
   .card {
       width: 80%; 
   }
+
+  .form__container {
+      flex-direction: row-reverse;
+    }
+  
+    form {
+      width: 50%;
+    }
+  
+    .form__container iframe {
+      width: 50%;
+      min-height: 600px;
+      max-height: 100%;
+    }
 
   .grid__crossfit {
     display: inherit;
@@ -47,6 +63,20 @@
         width: 90%; 
     }
 
+    .form__container {
+      flex-direction: row-reverse;
+    }
+  
+    form {
+      width: 50%;
+    }
+  
+    .form__container iframe {
+      width: 50%;
+      min-height: 600px;
+      max-height: 100%;
+    }
+
     .grid__boxeo {
       display: inherit;
     }
@@ -72,6 +102,20 @@
     grid-auto-flow: dense;
   }
 
+  .form__container {
+    flex-direction: row-reverse;
+  }
+
+  form {
+    width: 50%;
+  }
+
+  .form__container iframe {
+    width: 50%;
+    min-height: 600px;
+    max-height: 100%;
+  }
+
   .grid__boxeo {
     display: flex;
     flex-direction: column;
@@ -88,6 +132,20 @@
       grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
       grid-auto-rows: minmax(300px, auto);
       grid-auto-flow: dense;
+    }
+
+    .form__container {
+      flex-direction: row-reverse;
+    }
+  
+    form {
+      width: 50%;
+    }
+  
+    .form__container iframe {
+      width: 50%;
+      min-height: 600px;
+      max-height: 100%;
     }
 
     .grid__boxeo {
@@ -120,6 +178,20 @@
       flex-direction: row;
     }
 
+    .form__container {
+      flex-direction: row-reverse;
+    }
+  
+    form {
+      width: 50%;
+    }
+  
+    .form__container iframe {
+      width: 50%;
+      min-height: 600px;
+      max-height: 100%;
+    }
+
     .grid__boxeo {
       display: flex;
       flex-direction: column;
@@ -134,7 +206,7 @@
   }  
   
   @media (min-width:1024px) {
-    .form {
+    .form__container {
       flex-direction: row-reverse;
     }
   
@@ -142,7 +214,7 @@
       width: 50%;
     }
   
-    .form iframe {
+    .form__container iframe {
       width: 50%;
       min-height: 600px;
       max-height: 100%;
